# key-geometry-optimizer

./: CMakeLists.txt  README.md
data/: finger_positions.json
data/fields/: fields_meta.json  left_index.npy  left_middle.npy  left_pinky.npy  right_index.npy  right_middle.npy  right_pinky.npy  right_thumb.npy
python/: create_fields.py  visualize_fields.py
src/: fields.cpp  fields.h  kernels.cu  kernels.cuh  main.cpp
